--- a/weathestyle.css
+++ b/weathestyle.css
@@ -42,7 +42,8 @@ body{
     background-image:url('tobias-keller-HzSLh5zV42s-unsplash.jpg') ;
     background-repeat: no-repeat;
     background-size:cover;
-    margin: 0px;
+    margin: 0;
+    padding: 0;
     width: 100vw;
     height: 100vh;
     overflow: auto;
