--- a/weathestyle.css
+++ b/weathestyle.css
@@ -68,14 +68,11 @@ button:focus{
 }
 
 input[type=text] {
-    width: 50%;
-    background:transparent;
-       
+    width: 50%;       
   }
 
 input[type=submit] {
-    width: 7%;
-    background:transparent;    
+    width: 30%;  
   }
 input[type=submit]:hover {
     cursor:pointer;    
@@ -88,4 +85,10 @@ input[type=submit]:hover {
     color:white;
     
     font-size:20px;
+}
+
+@media only screen and (max-width:700px){
+    input::placeholder{
+        font-size: 1em;
+    }
 }
