--- a/weathestyle.css
+++ b/weathestyle.css
@@ -88,7 +88,7 @@ input[type=submit]:hover {
 }
 
 @media only screen and (max-width:700px){
-    input::placeholder{
-        font-size: 1em;
+    ::placeholder{
+        font-size: 5px;
     }
 }
