--- a/weathestyle.css
+++ b/weathestyle.css
@@ -87,3 +87,8 @@ input[type=submit]:hover {
     font-size:20px;
 }
 
+@media only screen and (max-width:700px){
+    ::placeholder{
+        font-size: 17px;
+    }
+}
