--- a/weathestyle.css
+++ b/weathestyle.css
@@ -87,6 +87,7 @@ input[type=submit]:hover {
     font-size:20px;
 }
 
+/* for mobile responsiveness */
 @media only screen and (max-width:700px){
     ::placeholder{
         font-size: 15px;
@@ -95,3 +96,5 @@ input[type=submit]:hover {
         width:20%
     }
 }
+
+/* Background image credit: Tobias Keller on Unsplash */
